# ears

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
examples/: advanced.rs  basic.rs  direct_channel.rs  many_sounds.rs  music.rs  record.rs  simple_player.rs  threads.rs
res/: LICENSE
src/: audio_controller.rs  audio_tags.rs  ears.rs  error.rs  init.rs  internal.rs  lib.rs  listener.rs  music.rs  openal.rs  presets.rs  record_context.rs  recorder.rs  reverb_effect.rs  sndfile.rs  sndfile_ffi.rs  sound.rs  sound_data.rs  states.rs
src/examples/many_sounds/: main.rs
src/examples/record/: main.rs
src/examples/simple_player/: main.rs
