[package]
name = "ears"
version = "0.4.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>", "Jan Niklas Hasse <jhasse@bixense.com>"]
license = "MIT"
keywords = ["audio", "openal", "sndfile", "sound", "music"]
readme = "README.md"
build = "build.rs"
exclude = [ "appveyor.yml", ".travis.yml", "res/*" ]
repository = "https://github.com/jhasse/ears"
documentation = "http://bixense.com/ears/ears/"
description = "Easy Api in Rust to play Sounds"

[lib]
name = "ears"
crate-type = ["dylib", "rlib"]

[dependencies]
libc = "0.2"
lazy_static = "0.2"
