[package]
name = "ears"
version = "0.8.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>", "Jan Niklas Hasse <jhasse@bixense.com>", "Nick Browne <nickbrowne@users.noreply.github.com>"]
license = "MIT"
keywords = ["audio", "openal", "sndfile", "sound", "music"]
readme = "README.md"
build = "build.rs"
exclude = [ "appveyor.yml", ".travis.yml", "res/*" ]
repository = "https://github.com/nickbrowne/ears"
documentation = "https://docs.rs/ears/"
description = "Easy Rust API to play audio using OpenAL"

[lib]
name = "ears"
crate-type = ["dylib", "rlib"]

[dependencies]
libc = "0.2"
lazy_static = "1"

[build-dependencies]
pkg-config = "0.3"

[badges]
appveyor = { repository = "nickbrowne/ears", branch = "master" }
travis-ci = { repository = "nickbrowne/ears", branch = "master" }
